turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:13: error: type mismatch;
 found   : java.awt.Color
 required: Int
  var nextColor = rule(state)(couleurActuelle)(0)
                              ^Turmite:15: error: type mismatch;
 found   : java.awt.Color
 required: Int
  var mvtSuiv = rule(state)(couleurActuelle)(1)
                            ^Turmite:27: error: type mismatch;
 found   : java.awt.Color
 required: Int
  state = rule(state)(couleurActuelle)(2)
                      ^